--- a/package.json
+++ b/package.json
@@ -14,11 +14,15 @@
     "@emotion/styled": "^11.14.0",
     "@mui/icons-material": "^6.4.7",
     "@mui/material": "^6.4.7",
+    "@mui/x-date-pickers": "^7.28.0",
     "@supabase/auth-helpers-nextjs": "^0.10.0",
     "@supabase/supabase-js": "^2.49.1",
+    "@types/react-swipeable-views": "^0.13.6",
+    "date-fns": "^4.1.0",
     "next": "15.2.2",
     "react": "^19.0.0",
-    "react-dom": "^19.0.0"
+    "react-dom": "^19.0.0",
+    "react-swipeable-views": "^0.14.0"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
