--- a/package.json
+++ b/package.json
@@ -17,12 +17,14 @@
     "@mui/x-date-pickers": "^7.28.0",
     "@supabase/auth-helpers-nextjs": "^0.10.0",
     "@supabase/supabase-js": "^2.49.1",
-    "@types/react-swipeable-views": "^0.13.6",
+    "@types/react-beautiful-dnd": "^13.1.8",
     "date-fns": "^4.1.0",
     "next": "15.2.2",
     "react": "^19.0.0",
+    "react-beautiful-dnd": "^13.1.1",
     "react-dom": "^19.0.0",
-    "react-swipeable-views": "^0.14.0"
+    "react-swipeable": "^7.0.2",
+    "react-swipeable-views-react-18-fix": "^0.14.1"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
